# tmux-compose-py

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: complex.yml  medium.yml  simple.yml
tests/: test_duration.py  test_model.py  test_tui.py  test_up.py
tmux_compose/: __init__.py  cli.py  errors.py  model.py  runner.py  terminal.py  tmux.py  tui.py
